grub2 (1.99-5) UNRELEASED; urgency=low

  [ Colin Watson ]
  * Change grub2/linux_cmdline and grub2/kfreebsd_cmdline descriptions to
    indicate that the command line is allowed to be empty, since this is a
    common source of confusion (thanks, Jordan Uggla).

  [ Debconf translations ]
  * French (Christian Perrier)
  * Russian (Yuri Kozlov).  Closes: #628196

 -- Colin Watson <cjwatson@debian.org>  Fri, 27 May 2011 13:33:48 +0100

grub2 (1.99-4) unstable; urgency=low

  * Make grub-<platform>-bin packages depend on grub-common rather than
    grub2-common, and add grub2-common dependencies to grub-<platform>.
    This ensures that grub-<platform>-bin packages are coinstallable with
    grub-legacy, making it easier to use them as build-dependencies.
  * Stop trying to install the non-existent grub-ofpathname(8) on sparc for
    now.  It will exist in the next upstream snapshot.

 -- Colin Watson <cjwatson@debian.org>  Thu, 19 May 2011 12:38:45 +0100

grub2 (1.99-3) unstable; urgency=low

  * Ship grub-mkrescue on non-Linux amd64/i386 architectures.
  * Don't try to ship grub-mkrescue on sparc.
  * Drop boot_blocklist_hack.patch, fixed differently upstream some time ago
    by being smarter about filesystem-root-relative path conversion.

 -- Colin Watson <cjwatson@debian.org>  Wed, 18 May 2011 14:06:51 +0100

grub2 (1.99-2) unstable; urgency=low

  * Include both old and new Lintian override styles for
    statically-linked-binary tag, since ftp-master has not yet been updated
    to 2.5.0~rc1.

 -- Colin Watson <cjwatson@debian.org>  Tue, 17 May 2011 01:36:10 +0100

grub2 (1.99-1) unstable; urgency=low

  * New upstream release.
    - Ensure uniqueness of RAID array numbers even if some elements have a
      name (closes: #609804).
    - Remove unnecessary brackets from tr arguments (closes: #612564).
    - Add grub-mkrescue info documentation (closes: #612585).
    - Avoid generating invalid configuration when something that looks like