@@ -73,7 +73,7 @@ Recommends: os-prober (>= 1.33)
 Suggests: multiboot-doc, grub-emu, xorriso (>= 0.5.6.pl00), desktop-base (>= 4.0.6)
 # See bugs #435983 and #455746
 Conflicts: mdadm (<< 2.6.7-2)
-Breaks: lupin-support (<< 0.30)
+Breaks: lupin-support (<< 0.30), ${udev-Breaks}
 Multi-Arch: foreign
 Description: GRand Unified Bootloader (common files)
  This package contains common files shared by the distinct flavours of GRUB.
