@@ -4,6 +4,9 @@ grub2 (1.99-5) UNRELEASED; urgency=low
   * Change grub2/linux_cmdline and grub2/kfreebsd_cmdline descriptions to
     indicate that the command line is allowed to be empty, since this is a
     common source of confusion (thanks, Jordan Uggla).
+  * On non-Ubuntu-derived systems, add Breaks: udev (<< 168-1) to
+    grub-common, for the sake of systemd users without initrds (closes:
+    #627587).
 
   [ Debconf translations ]
   * French (Christian Perrier)
